  macro. (RFB)

2013-08-01
- aes/gemevlib.c aes/gemevlib.h aes/gemsuper.c: Replace some macro usage
  with inline function. (RFB)
- aes/gemsuper.c: Replace some compatibility macro usage. (RFB)
- aes/gemasync.c aes/geminput.c include/compat.h: Eliminate HW()
  compatibility macro. (RFB)
- aes/gemsclib.c aes/gemshlib.c desk/deskfun.c include/compat.h:
  Eliminate LBGET() compatibility macro. (RFB)
- aes/gemaplib.c aes/gemsclib.c aes/gemshlib.c include/compat.h:
  Eliminate LBSET() compatibility macro. (RFB)

2013-08-03
- aes/gemshlib.c: Fix bug in shel_find(): the AES path wasn't
  searched. (RFB)
- aes/gemsuper.c aes/gemsuper.h: Code cleanup: replace #defines, casts
  with structure definition. (RFB)
- aes/gemrslib.c aes/gemrslib.h aes/gemsuper.c: Code cleanup: replace
  #defines, casts with structure definition. (RFB)
- aes/gemrslib.c include/compat.h: Eliminate LW() compatibility macro. (RFB)
- aes/gemrslib.c: Code cleanup: replace #defines with union. (RFB)

2013-08-05
- aes/gemrslib.c include/compat.h: Code cleanup: replace #defines, casts
  with structures, unions. (RFB)
- desk/deskact.c desk/deskapp.c desk/deskbind.h include/compat.h:
  Eliminate LWGET() compatibility macro. (RFB)
- aes/geminit.h: Make AES PATH= environment string the same as TOS. (RFB)

2013-08-15
- aes/gempd.c: Code cleanup: simplify, reduce size, fix minor error. (RFB)
- aes/gemshlib.c: Fix bug in sh_ldapp(): application directory was not
  set correctly. (RFB)
- aes/gemshlib.c: Make search order for shel_find()/rsrc_load() the same
  as TOS3/TOS4. (RFB)
- aes/basepage.h aes/gemaplib.c aes/gemaplib.h aes/gemasm.h aes/gemasync.c
  aes/gemctrl.c aes/gemctrl.h aes/gemdisp.c aes/gemfmlib.c aes/geminit.c
  aes/geminput.c aes/geminput.h aes/gemlib.h aes/gemmnlib.c aes/gemmnlib.h
  aes/gempd.c aes/gempd.h aes/gemqueue.c aes/gemwmlib.c aes/gemwmlib.h
  aes/struct.h: Code cleanup: rename AES's PD structure to AESPD to avoid
  conflict with the BDOS PD. (RFB)