@@ -4938,3 +4938,5 @@ Start... early ages
   aes/gempd.c aes/gempd.h aes/gemqueue.c aes/gemwmlib.c aes/gemwmlib.h
   aes/struct.h: Code cleanup: rename AES's PD structure to AESPD to avoid
   conflict with the BDOS PD. (RFB)
+- aes/gemgraf.h desk/deskgraf.c desk/deskgraf.h include/gsxdefs.h: Code
+  cleanup: move common definitions to gsxdefs.h. (RFB)
